--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>App Support</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
+    a { color: #007aff; text-decoration: none; font-weight: bold; }
+  </style>
+</head>
+<body>
+  <h1>Support for MyApp</h1>
+  <p>If you have any issues, please contact us:</p>
+  <p><a href="mailto:jfreetaeho@gmail.com">jfreetaeho@gmail.com</a></p>
+</body>
+</html>
 
